--- a/index.html
+++ b/index.html
@@ -93,9 +93,8 @@
         <header class="header nav-fixed">
             <div class="container">
                 <div class="header-main">
-                    <a href="#!" class="header-logo">
+                    <a href="#" class="header-logo">
                         <img src="./assets/icon/logo.svg" alt="" />
-                        <span>MODULARS</span>
                     </a>
                     <section class="header__nav">
                         <div class="header__nav-include">
@@ -126,7 +125,7 @@
             <div class="container">
                 <div class="header__hero-content">
                     <div class="left__header-hero">
-                        <h2>We’re a creative design agency.</h2>
+                        <h1>We’re a creative design agency.</h1>
                         <p>
                             A brilliant, modular agency template for startup’s
                             build yours toady.
@@ -144,7 +143,7 @@
                                         />
                                     </div>
                                 </div>
-                                Watch Video
+                                <span>Watch Video</span>
                             </button>
                         </div>
                     </div>
@@ -191,5 +190,145 @@
                 </div>
             </div>
         </section>
+
+        <!-- trademark -->
+        <div class="trademark">
+            <div class="container">
+                <figure class="trademark-bg">
+                    <ul class="trademark-list">
+                        <li class="trademark-item">
+                            <a href="http://www.google.com/" target="_blank">
+                                <img src="./assets/img/Google.svg" alt="" />
+                            </a>
+                        </li>
+                        <li class="trademark-item">
+                            <a href="#!" target="_blank">
+                                <img src="./assets/img/slack.svg" alt="" />
+                            </a>
+                        </li>
+                        <li class="trademark-item">
+                            <a
+                                href="https://discord.com/"
+                                class="trademark-agworld"
+                                target="_blank"
+                            >
+                                <img src="./assets/img/discord.svg" alt="" />
+                                <img src="./assets/img/Agworld.svg" alt="" />
+                            </a>
+                        </li>
+                        <li class="trademark-item">
+                            <a href="#!" target="_blank">
+                                <img src="./assets/img/RioTinto.svg" alt="" />
+                            </a>
+                        </li>
+                        <li class="trademark-item">
+                            <a href="#!">
+                                <img src="./assets/img/heroku.svg" alt="" />
+                            </a>
+                        </li>
+                    </ul>
+                </figure>
+            </div>
+        </div>
+
+        <!-- OUR SERVICES -->
+        <article class="services">
+            <div class="container">
+                <div class="our-services">OUR SERVICES</div>
+                <div class="services__row">
+                    <h2 class="services__heading">
+                        We offer a wide range of design services
+                        <img src="./assets/img/Rectangle-service.svg" alt="" />
+                    </h2>
+                    <div class="services__cta">
+                        <button class="services__btn">
+                            <svg
+                                width="22"
+                                height="13"
+                                viewBox="0 0 22 13"
+                                fill="currentColor"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    d="M21 6.82353H0.999999M0.999999 6.82353L6.29412 1M0.999999 6.82353L6.29412 12"
+                                    stroke="currentColor"
+                                    stroke-width="1.5"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                            </svg>
+                        </button>
+                        <button class="services__btn service-right">
+                            <svg
+                                width="22"
+                                height="13"
+                                viewBox="0 0 22 13"
+                                fill="currentColor"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    d="M21 6.82353H0.999999M0.999999 6.82353L6.29412 1M0.999999 6.82353L6.29412 12"
+                                    stroke="currentColor"
+                                    stroke-width="1.5"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+                <!-- service__list -->
+                <div class="service__list">
+                    <!-- service-item 1 -->
+                    <section class="service-item">
+                        <img
+                            src="./assets/img/brand.png"
+                            alt=""
+                            class="service-item__thumb"
+                        />
+                        <figure class="service-item__info">
+                            <h3 class="section__title">Branding</h3>
+                            <p class="section__desc line-clamp">
+                                Create beautiful Agency website with Boluethat
+                                converts more visitors than any website.
+                            </p>
+                        </figure>
+                    </section>
+                    <!-- service-item 2 -->
+                    <section class="service-item">
+                        <img
+                            src="./assets/img/web-design.jpg"
+                            alt=""
+                            class="service-item__thumb"
+                        />
+                        <figure class="service-item__info">
+                            <h3 class="section__title">Web Design</h3>
+                            <p class="section__desc line-clamp">
+                                Web designing is the process of planning,
+                                conceptualizing, and implementing the plan for
+                                designing a website in a way that is functional
+                                and offers a good user experience.
+                            </p>
+                        </figure>
+                    </section>
+                    <!-- service-item 3 -->
+                    <section class="service-item">
+                        <img
+                            src="./assets/img/graphic.jpg"
+                            alt=""
+                            class="service-item__thumb"
+                        />
+                        <figure class="service-item__info">
+                            <h3 class="section__title">Graphic Design</h3>
+                            <p class="section__desc line-clamp">
+                                Graphic Design là nghệ thuật phối hợp các yếu tố
+                                hình ảnh, kiểu chữ, nhằm truyền tải đến người
+                                xem một thông điệp nào đó.
+                            </p>
+                        </figure>
+                    </section>
+                </div>
+            </div>
+        </article>
     </body>
 </html>
