--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         </ul>
                         <!-- FLowers -->
                         <div class="header__hero-flowers">
-                            <div class="header__hero-flo1">
+                            <figure class="header__hero-flo1">
                                 <img
                                     src="./assets/icon/Union.svg"
                                     alt="flower-line"
@@ -172,8 +172,8 @@
                                     alt="flower-line"
                                     class="line"
                                 />
-                            </div>
-                            <div class="header__hero-flo2">
+                            </figure>
+                            <figure class="header__hero-flo2">
                                 <img
                                     src="./assets/icon/Union.svg"
                                     alt="flower-line"
@@ -184,7 +184,7 @@
                                     alt="flower-line"
                                     class="line"
                                 />
-                            </div>
+                            </figure>
                         </div>
                     </div>
                 </div>
@@ -234,9 +234,9 @@
         <!-- OUR SERVICES -->
         <article class="services">
             <div class="container">
-                <div class="our-services">OUR SERVICES</div>
+                <div class="our-services title-flag">OUR SERVICES</div>
                 <div class="services__row">
-                    <h2 class="services__heading">
+                    <h2 class="services__heading section__heading">
                         We offer a wide range of design services
                         <img src="./assets/img/Rectangle-service.svg" alt="" />
                     </h2>
@@ -288,8 +288,8 @@
                         />
                         <figure class="service-item__info">
                             <h3 class="section__title">Branding</h3>
-                            <p class="section__desc line-clamp">
-                                Create beautiful Agency website with Boluethat
+                            <p class="section__desc-14 line-clamp">
+                                Create beautiful Agency website with Blue that
                                 converts more visitors than any website.
                             </p>
                         </figure>
@@ -303,7 +303,7 @@
                         />
                         <figure class="service-item__info">
                             <h3 class="section__title">Web Design</h3>
-                            <p class="section__desc line-clamp">
+                            <p class="section__desc-14 line-clamp">
                                 Web designing is the process of planning,
                                 conceptualizing, and implementing the plan for
                                 designing a website in a way that is functional
@@ -320,7 +320,7 @@
                         />
                         <figure class="service-item__info">
                             <h3 class="section__title">Graphic Design</h3>
-                            <p class="section__desc line-clamp">
+                            <p class="section__desc-14 line-clamp">
                                 Graphic Design là nghệ thuật phối hợp các yếu tố
                                 hình ảnh, kiểu chữ, nhằm truyền tải đến người
                                 xem một thông điệp nào đó.
@@ -330,5 +330,180 @@
                 </div>
             </div>
         </article>
+
+        <!-- About -->
+        <section class="about">
+            <div class="container">
+                <section class="about-content">
+                    <div class="left__about">
+                        <div class="left__about-main">
+                            <figure class="left__about-vector">
+                                <img
+                                    src="./assets/icon/Union.svg"
+                                    alt="flower-line"
+                                    class="flower"
+                                />
+                                <img
+                                    src="./assets/icon/union-lite.svg"
+                                    alt="flower-line"
+                                    class="line"
+                                />
+                            </figure>
+                            <figure class="left__about-img">
+                                <img
+                                    src="./assets/img/about-1.jpg"
+                                    alt=""
+                                    class="left__about-image"
+                                />
+                                <img
+                                    src="./assets/img/about-2.png"
+                                    alt=""
+                                    class="left__about-image"
+                                />
+                            </figure>
+                            <div class="left__about-data">
+                                <h3 class="about__data-title">All Designers</h3>
+                                <p class="about__data-desc">Total Balance</p>
+                                <div class="percent">40%</div>
+                                <div class="about__data-progress">
+                                    <div
+                                        class="about__data-percent"
+                                        style="width: 40%"
+                                    ></div>
+                                </div>
+                                <span>Loading...</span>
+                                <img
+                                    src="./assets/icon/about-data.svg"
+                                    alt=""
+                                    class="about__data-dot"
+                                />
+                                <div class="about__data-team">
+                                    <span>Teams:</span>
+                                    <div class="team__name-img">
+                                        <img
+                                            src="./assets/img/avatar1.jpg"
+                                            alt=""
+                                            class="team-avt"
+                                        />
+                                        <img
+                                            src="./assets/img/avatar2.jpg"
+                                            alt=""
+                                            class="team-avt"
+                                        />
+                                        <img
+                                            src="./assets/img/avatar3.jpg"
+                                            alt=""
+                                            class="team-avt"
+                                        />
+                                        <img
+                                            src="./assets/img/avatar4.jpg"
+                                            alt=""
+                                            class="team-avt"
+                                        />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right__about">
+                        <div class="title-flag">ABOUT US</div>
+                        <h2 class="right__about-title section__heading">
+                            We are an extension of your creative team
+                        </h2>
+                        <p class="right__about-desc section__desc-16">
+                            At the start of every project, we customize detailed
+                            project plan together with you set expectations
+                            ensure alignment and define key milestones and
+                            deliverables.
+                        </p>
+                        <div class="right__about-info">
+                            <!-- 48% -->
+                            <div class="right-info">
+                                <h2
+                                    class="right__about-percent section__heading"
+                                >
+                                    48%
+                                </h2>
+                                <p
+                                    class="right__about-percent-desc section__desc-14"
+                                >
+                                    Are you strive for two things in design
+                                    simplicity and clarity. Great design is born
+                                    of those two things
+                                </p>
+                            </div>
+                            <!-- 26% -->
+                            <div class="right-info">
+                                <h2
+                                    class="right__about-percent section__heading"
+                                >
+                                    26%
+                                </h2>
+                                <p
+                                    class="right__about-percent-desc section__desc-14"
+                                >
+                                    Are you strive for two things in design
+                                    simplicity and clarity. Great design is born
+                                    of those two things
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </section>
+
+        <!-- Process -->
+        <section class="process">
+            <div class="container">
+                <div class="title-flag">OUR PROCESS</div>
+                <h2 class="process-heading section__heading">
+                    A simple ,yet effective three step process
+                    <img src="./assets/img/Rectangle-service.svg" alt="" />
+                </h2>
+                <article class="list__process">
+                    <!-- Process 1 -->
+                    <div class="list__process-item">
+                        <figure  class="process-name">
+                            <div class="list__process-row">01.</div>
+                            <div class="section__title">Project idea
+                                <a href="#!">Learn More</a>
+                            </div>
+
+                        </figure>
+                        <div class="list__process-info">
+                            <img src="./assets/img/process.png" alt=""
+                            >
+                        </div>
+                    </div>
+                    <!-- Process 2 -->
+                    <div class="list__process-item">
+                       <figure class="process-name">
+                            <div class="list__process-row">02.</div>
+                            <div class="section__title">Brainstorming
+                                <a href="#!">Learn More</a>
+                            </div>
+                       </figure>
+                        <p class="list__process-info section__desc-18 ">
+                            We customize to ensure alignment and define key milestones and deliverables. Experience tells us the best solutions are the ones created with clients.
+                        </p>
+                    </div>
+                    <!-- Process 3 -->
+                    <div class="list__process-item">
+                        <figure  class="process-name">
+                            <div class="list__process-row">03.</div>
+                            <div class="list__process-title section__title">Execution
+                                
+                                <a href="#!">Learn More</a>
+
+                            </div>
+                        </figure>
+                        <p class="list__process-info section__desc-18 ">
+                            We customize to ensure alignment and define key milestones and deliverables. Experience tells us the best solutions are the ones created with clients.
+                        </p>
+                    </div>
+                </article>
+            </div>
+        </div>
     </body>
 </html>
