--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
                             <div class="btn">Get in touch</div>
                             <a
                                 href="https://www.youtube.com/watch?v=mvAceDeU_gU"
+                                target="_blank"
                                 class="header__btn-vid"
                             >
                                 <div class="header__btn-total">
