--- a/index.html
+++ b/index.html
@@ -203,34 +203,20 @@
                 <figure class="trademark-bg">
                     <ul class="trademark-list">
                         <li class="trademark-item">
-                            <a href="http://www.google.com/" target="_blank">
-                                <img src="./assets/img/Google.svg" alt="" />
-                            </a>
+                            <img src="./assets/img/Google.svg" alt="" />
                         </li>
                         <li class="trademark-item">
-                            <a href="#!" target="_blank">
-                                <img src="./assets/img/slack.svg" alt="" />
-                            </a>
+                            <img src="./assets/img/slack.svg" alt="" />
                         </li>
                         <li class="trademark-item">
-                            <a
-                                href="https://discord.com/"
-                                class="trademark-agworld"
-                                target="_blank"
-                            >
-                                <img src="./assets/img/discord.svg" alt="" />
-                                <img src="./assets/img/Agworld.svg" alt="" />
-                            </a>
+                            <img src="./assets/img/discord.svg" alt="" />
+                            <img src="./assets/img/Agworld.svg" alt="" />
                         </li>
                         <li class="trademark-item">
-                            <a href="#!" target="_blank">
-                                <img src="./assets/img/RioTinto.svg" alt="" />
-                            </a>
+                            <img src="./assets/img/RioTinto.svg" alt="" />
                         </li>
                         <li class="trademark-item">
-                            <a href="#!">
-                                <img src="./assets/img/heroku.svg" alt="" />
-                            </a>
+                            <img src="./assets/img/heroku.svg" alt="" />
                         </li>
                     </ul>
                 </figure>
@@ -655,10 +641,10 @@
                             <button class="blog__item-btn">
                                 <a href="#!">STORIES</a>
                             </button>
-                            <p class="blog__item-desc">
+                            <a href="#!" class="blog__item-desc">
                                 What did we learn from running over 100 design
                                 sprints in less the year?
-                            </p>
+                            </a>
                             <div class="blog__item-line"></div>
                         </div>
                         <span class="blog__item-date"> JANUARY 29, 2024 </span>
@@ -674,10 +660,10 @@
                             <button class="blog__item-btn">
                                 <a href="#!">STORIES</a>
                             </button>
-                            <p class="blog__item-desc">
+                            <a href="#!" class="blog__item-desc">
                                 The difference between the UI/ UX design a
                                 simple guide for beginner’s
-                            </p>
+                            </a>
                             <div class="blog__item-line"></div>
                         </div>
                         <span class="blog__item-date"> April 14, 2024 </span>
@@ -693,10 +679,10 @@
                             <button class="blog__item-btn">
                                 <a href="#!">STORIES</a>
                             </button>
-                            <p class="blog__item-desc">
+                            <a href="#!" class="blog__item-desc">
                                 How marketing can help your business more than
                                 anything.
-                            </p>
+                            </a>
                             <div class="blog__item-line"></div>
                         </div>
                         <span class="blog__item-date"> August 15, 2023 </span>
@@ -714,16 +700,16 @@
                             Sign up for our newsletter
                         </div>
                         <div class="left__footer-email">
+                            <input
+                                type="email"
+                                class="footer__email-input"
+                                placeholder="Enter your email"
+                                required
+                            />
                             <a
-                                href="https://mail.google.com/mail/u/0/#inbox"
+                                href="mailto:Tienthanh14042000@gmail.com"
                                 target="_blank"
                             >
-                                <input
-                                    type="email"
-                                    class="footer__email-input"
-                                    placeholder="Enter your email"
-                                    required
-                                />
                                 <svg
                                     width="22"
                                     height="12"
