--- a/index.html
+++ b/index.html
@@ -18,72 +18,72 @@
         />
 
         <!-- Favicon -->
-        <link rel="apple-touch-icon" sizes="57x57" href="./favicon" />
+        <link rel="apple-touch-icon" sizes="57x57" href="./favicon/" />
         <link
             rel="apple-touch-icon"
             sizes="60x60"
-            href="./favicon/apple-icon-60x60.png"
+            href="./favicon//apple-icon-60x60.png"
         />
         <link
             rel="apple-touch-icon"
             sizes="72x72"
-            href="./favicon/apple-icon-72x72.png"
+            href="./favicon//apple-icon-72x72.png"
         />
         <link
             rel="apple-touch-icon"
             sizes="76x76"
-            href="./favicon/apple-icon-76x76.png"
+            href="./favicon//apple-icon-76x76.png"
         />
         <link
             rel="apple-touch-icon"
             sizes="114x114"
-            href="./favicon/apple-icon-114x114.png"
+            href="./favicon//apple-icon-114x114.png"
         />
         <link
             rel="apple-touch-icon"
             sizes="120x120"
-            href="./favicon/apple-icon-120x120.png"
+            href="./favicon//apple-icon-120x120.png"
         />
         <link
             rel="apple-touch-icon"
             sizes="144x144"
-            href="./favicon/apple-icon-144x144.png"
+            href="./favicon//apple-icon-144x144.png"
         />
         <link
             rel="apple-touch-icon"
             sizes="152x152"
-            href="./favicon/apple-icon-152x152.png"
+            href="./favicon//apple-icon-152x152.png"
         />
         <link
             rel="apple-touch-icon"
             sizes="180x180"
-            href="./favicon/apple-icon-180x180.png"
+            href="./favicon//apple-icon-180x180.png"
         />
         <link
             rel="icon"
             type="image/png"
             sizes="192x192"
-            href="./favicon/android-icon-192x192.png"
+            href="./favicon//android-icon-192x192.png"
         />
         <link
             rel="icon"
             type="image/png"
             sizes="32x32"
-            href="./favicon/favicon-32x32.png"
+            href="./favicon//favicon-32x32.png"
         />
         <link
             rel="icon"
             type="image/png"
             sizes="96x96"
-            href="./favicon/favicon-96x96.png"
+            href="./favicon//favicon-96x96.png"
         />
         <link
             rel="icon"
             type="image/png"
             sizes="16x16"
-            href="./favicon/favicon-16x16.png"
+            href="./favicon//favicon-16x16.png"
         />
-        <link rel="manifest" href="./favicon/manifest.json" />
+        <link rel="manifest" href="./favicon//manifest.json" />
         <meta name="msapplication-TileColor" content="#ffffff" />
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
         <meta name="theme-color" content="#ffffff" />
@@ -576,7 +576,7 @@
                             class="features__item-img"
                         />
                         <h3 class="features__item-name">Blog</h3>
-                        <p class="features__item-desc">
+                        <p class="section__desc-14">
                             We’ve researched numerous agencies and complied a
                             list of digital marketing agency blogs you should
                             read to stay ahead of your rivals and succeed
@@ -591,7 +591,7 @@
                             class="features__item-img"
                         />
                         <h3 class="features__item-name">Documentation</h3>
-                        <p class="features__item-desc">
+                        <p class="section__desc-14">
                             In this article, we discuss the different types of
                             documentation, what makes for great technical
                             documentation, and provide examples.
@@ -605,7 +605,7 @@
                             class="features__item-img"
                         />
                         <h3 class="features__item-name">Customers</h3>
-                        <p class="features__item-desc">
+                        <p class="section__desc-14">
                             Your customers have high expectations — and if your
                             business can't meet them, they're going to leave you
                             for your competitors.
@@ -624,7 +624,7 @@
                         Take a look at our latest articles and resources
                         <img src="./assets/img/Rectangle-service.svg" alt="" />
                     </h2>
-                    <p class="blog__row-desc">
+                    <p class="blog__row-desc section__desc-16">
                         The best agency are the ones ideated with clients. we
                         corporate your ideas with memorable
                     </p>
